# embedded-gui

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  build.rs
.githooks/: pre-commit  pre-push
.github/workflows/: rust.yml
assets/fonts/: ascii_3x5.txt  ascii_4x7.txt
docs/: animation-presets.md  interaction-behavior-contract.md  textarea-input-keybindings.md  transition-presets.md  ux-priority-execution-plan.md
examples/: animation_dirty_showcase.rs  animation_kitchen_sink_showcase.rs  animation_motion_showcase.rs  capture_cinematic_showcase.rs  cinematic_peek_glance_carddeck_showcase.rs  complex_layout_showcase.rs  core_primitives_parity_showcase.rs  dashboard_app.rs  embedded_3dgfx_overlay.rs  event_dispatch_showcase.rs  feed_timeline_showcase.rs  font_text_model_showcase.rs  form_flow_showcase.rs  generate_readme_screenshots.rs  input_gesture_drag_repeat_showcase.rs  interaction_semantics_showcase.rs  long_press_input_showcase.rs  menu_contract_showcase.rs  notification_primitives_showcase.rs  raw_key_input_showcase.rs  simulator_menu.rs  state_surface_showcase.rs  text_layout_showcase.rs  timeline_transition_showcase.rs  visual_quality_showcase.rs  widgets_showcase.rs
scripts/: preview_glyphs.py
src/: animation.rs  animation_timeline.rs  animation_timing.rs  block.rs  cinematic.rs  context.rs  font.rs  geometry.rs  image.rs  input.rs  layout.rs  lib.rs  math.rs  present.rs  render.rs  screen.rs  screen_transition.rs  state.rs  style.rs  test_buffer.rs  text.rs  transition_preset.rs  widget.rs  widget_animation.rs
src/widgets/: mod.rs
tests/: gui.rs
