[package]
name = "embedded-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Gerzain Mata <leftger@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std GUI and HUD primitives for embedded-graphics displays"
keywords = ["embedded-graphics", "gui", "hud", "embedded", "no_std"]
categories = ["embedded", "gui", "no-std"]
repository = "https://github.com/leftger/embedded-gui"
homepage = "https://github.com/leftger/embedded-gui"
documentation = "https://docs.rs/embedded-gui"
readme = "README.md"
exclude = [
    "docs/screenshots/*.gif",
    "docs/screenshots/*.png",
    "assets/",
]

[features]
default = ["std"]
std = []
image-decode = ["std"]
libm = ["dep:libm"]
micromath = ["dep:micromath"]

[dependencies]
embedded-graphics-core = "0.4.1"
heapless = "0.9"
libm = {version = "0.2", optional = true}
micromath = {version = "2.1", optional = true}

[dev-dependencies]
embedded-3dgfx = { git = "https://github.com/leftger/embedded-3dgfx.git", branch = "master" }
embedded-graphics = "0.8"
embedded-graphics-framebuf = "0.3"
embedded-graphics-simulator = "0.8"
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
